Refactorización de la estructura del proyecto y actualización de dependencias - Se agregó relativePath al padre en diversos archivos pom.xml para una correcta resolución de módulos. - Se modificó el archivo docker-compose.yml para actualizar los puertos de los servicios y las variables de entorno. - Se añadieron archivos Dockerfile para los servicios: eureka-server, gateway, servicio de autenticación, servicio de inventario, servicio de notificaciones, servicio de pagos y servicio de pedidos. - Se actualizaron los archivos application.yml para usar URLs y puertos específicos de base de datos para cada servicio. - Se refactorizó el manejo del secreto JWT en FiltroJwt.java y application.yml. - Se cambió la forma en que se inicializan los usuarios en ServicioUsuarios.java para mejorar la legibilidad.