@@ -1,13 +1,13 @@
-package com.empresa.plataforma.autenticacion.servicio;
+package com.poli.plataforma.autenticacion.servicio;
 
-import com.empresa.plataforma.autenticacion.modelo.Usuario;
+import com.poli.plataforma.autenticacion.modelo.Usuario;
 import org.springframework.stereotype.Service;
 
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
+import java.util.Collections;
 
 /**
  * Servicio simple para gestionar usuarios en memoria.
@@ -17,10 +17,10 @@ public class ServicioUsuarios {
   private final Map<String, Usuario> usuarios = new HashMap<>();
 
   public ServicioUsuarios() {
-    // Usuarios de ejemplo: usuario1 (CLIENTE), admin (ADMIN), operador (OPERADOR)
-    usuarios.put("usuario1", new Usuario("usuario1", "secreto1", new HashSet<>(Set.of("CLIENTE"))));
-    usuarios.put("admin", new Usuario("admin", "admin123", new HashSet<>(Set.of("ADMIN"))));
-    usuarios.put("operador", new Usuario("operador", "operador123", new HashSet<>(Set.of("OPERADOR"))));
+    usuarios.put("usuario1", new Usuario("usuario1", "secreto1", new HashSet<>(Collections.singleton("CLIENTE"))));
+    usuarios.put("admin", new Usuario("admin", "admin123", new HashSet<>(Collections.singleton("ADMIN"))));
+    usuarios.put("operador", new Usuario("operador", "operador123", new HashSet<>(Collections.singleton("OPERADOR"))));
+    usuarios.put("operador", new Usuario("operador2", "operador123", new HashSet<>(Collections.singleton("OPERADOR"))));
   }
 
   public Optional<Usuario> buscarPorUsuario(String usuario) {
